LAB8/KR3.cpp.g++log.txt
C:\Prog\Edu\ProgCPP2sem\LAB8\KR3.cpp:1:1: error: 'vect' does not name a type
 vect sum (vect a, vect b) {
 ^
------------------------------------------------------------------------------------------
'iconv.exe' is not recognized as an internal or external command,
operable program or batch file.
